--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="mssg-body">
             <h1>We apologize for any inconvenience...</h1>
             <h3>Our website is under construction. </br> We will notify you as soon as we're back!</h3>
-            <span>In the meantime, you can always contact us on social media for any inquiries.</span>
+            <span>In the meantime, you can always contact us through this contact form for any inquiries.</span>
             <br>
             <span>Thank You!</span>
         </div>
@@ -56,6 +56,10 @@
 
         </div>
     </div>
+    <footer class="main-footer">
+        <div><h4>© 2023, Kartelio IT Limited. All Rights Reserved.</h4></div>
+        <div>8 Ruby St, Manchester M15 6RS, UK</div>
+    </footer>
 </body>
 
 </html>
