--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <footer class="main-footer">
         <div><h4>© 2023, Kartelio IT Limited. All Rights Reserved.</h4></div>
-        <div>8 Ruby St, Manchester M15 6RS, UK</div>
+        <div>119 Marylebone Rd, London NW1 5PN, UK</div>
     </footer>
 </body>
 
